--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
       crossorigin="anonymous"
     />
 
-    <title>Hello, world!</title>
+    <title>Blvck CEO</title>
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <h2>14/09/2021</h2>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
