blackceo background ns color

--- a/index.html
+++ b/index.html
@@ -15,10 +15,21 @@
 
     <title>Blvck CEO</title>
   </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <h2>14/09/2021</h2>
-
+  <body style="background-color: #000">
+    <main
+      style="
+        margin: auto;
+        display: flex;
+        justify-self: center;
+        text-align: center;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+        min-height: 100vh;
+      "
+    >
+      <h1 style="color: #fff">BLACKCEO</h1>
+    </main>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
