--- a/index.html
+++ b/index.html
@@ -28,7 +28,18 @@
         min-height: 100vh;
       "
     >
-      <h1 style="color: #fff">BLACKCEO</h1>
+      <h1 style="color: #fff">
+        <button
+          onclick="window.location.href='projects.html'"
+          style="
+            background-color: transparent;
+            color: white;
+            border: transparent;
+          "
+        >
+          Blackceo
+        </button>
+      </h1>
     </main>
     <!-- Optional JavaScript; choose one of the two! -->
 
