--- a/projects.html
+++ b/projects.html
@@ -23,17 +23,23 @@
       </div>
       <div class="content_section">
         <table class="table table-dark">
+        <thead>
         <tr>
             <th scope="row">Project Name</th>
-            <td colspan="1">Rent</td>
-            <td>Spider task</td>
-
-          </tr>
-          <tr>
             <th scope="row">Project Status</th>
+        </tr>
+        </thead>
+
+          <tr>
+            <td colspan="1">Rent</td>
             <td colspan="1"><i>ongoing</i></td>
+          </tr>
+
+          <tr>
+            <td>Spider task</td>
             <td><i>ongoing</i></td>
           </tr>
+        
         </table>
       </div>
     </main>
