added two new projects

--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,16 @@
             <td>Spider task</td>
             <td><i>ongoing</i></td>
           </tr>
+
+          <tr>
+            <td>Stingy Man</td>
+            <td><i>ongoing</i></td>
+        </tr>
         
+        <tr>
+            <td>Eaxie</td>
+            <td><i>ongoing</i></td>
+        </tr>
         </table>
       </div>
     </main>
