added rent under construction

--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,16 @@
         </thead>
 
           <tr>
-            <td colspan="1">Rent</td>
+            <td colspan="1"><button
+                onclick="window.location.href='rent.html'"
+                style="
+                  background-color: transparent;
+                  color: white;
+                  border: transparent;
+                "
+              >
+              Rent
+              </button></td>
             <td colspan="1"><i>ongoing</i></td>
           </tr>
 
