--- a/index.html
+++ b/index.html
@@ -16,61 +16,42 @@
     <title>Blvck CEO</title>
   </head>
   <body style="background-color: #000">
-    <header class="p-3 bg-dark text-white">
-      <div class="container">
-        <div
-          class="
-            d-flex
-            flex-wrap
-            align-items-center
-            justify-content-center justify-content-lg-start
-          "
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarTogglerDemo01"
+          aria-controls="navbarTogglerDemo01"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
         >
-          <a
-            href="/"
-            class="
-              d-flex
-              align-items-center
-              mb-2 mb-lg-0
-              text-white text-decoration-none
-            "
-          >
-            <svg
-              class="bi me-2"
-              width="40"
-              height="32"
-              role="img"
-              aria-label="Bootstrap"
-            >
-              <use xlink:href="#bootstrap" />
-            </svg>
-          </a>
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <a class="navbar-brand" href="#">BLVCKCEO</a>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#"
+                >Projects</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Team</a>
+            </li>
 
-          <ul
-            class="
-              nav
-              col-12 col-lg-auto
-              me-lg-auto
-              mb-2
-              justify-content-center
-              mb-md-0
-            "
-          >
-            <li>
-              <a href="#" class="nav-link px-2 text-secondary">Projects</a>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
             </li>
-            <li>
-              <a href="#" class="nav-link px-2 text-white">Departments</a>
-            </li>
-            <li><a href="#" class="nav-link px-2 text-white">About</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">Blog</a></li>
-            <li>
-              <a href="#" class="nav-link px-2 text-white">Achievements</a>
+
+            <li class="nav-item">
+              <a class="nav-link" href="#">Achievements</a>
             </li>
           </ul>
         </div>
       </div>
-    </header>
+    </nav>
 
     <main
       style="
