--- a/rent.html
+++ b/rent.html
@@ -12,24 +12,22 @@
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
       crossorigin="anonymous"
     />
+    <!--my own css-->
+    <link href="iindex.css" rel="stylesheet" />
 
     <title>RENT</title>
   </head>
-  <body style="background-color: #000">
-    <main
-      style="
-        margin: auto;
-        display: flex;
-        justify-self: center;
-        text-align: center;
-        flex-direction: column;
-        justify-content: center;
-        align-content: center;
-        min-height: 100vh;
-      "
-    >
-      <h1 style="color: #fff">RENT UNDER CONTRUCTION</h1>
+  <body>
+    <main>
+      <div>
+        <form>
+          <input type="text" name="username" placeholder="username" /><br />
+          <input type="password" name="password" placeholder="passcode" /><br />
+          <input type="submit" title="rent" />
+        </form>
+      </div>
     </main>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
