--- a/rent.html
+++ b/rent.html
@@ -19,11 +19,22 @@
   </head>
   <body>
     <main>
-      <div>
+      <h1>Rent homes.anytime.</h1>
+      <div class="mb-3 row-cols-auto g-3">
         <form>
-          <input type="text" name="username" placeholder="username" /><br />
-          <input type="password" name="password" placeholder="passcode" /><br />
-          <input type="submit" title="rent" />
+          <input
+            class="form-control-sm"
+            type="text"
+            name="username"
+            placeholder="username"
+          />
+          <input
+            class="form-control-sm"
+            type="password"
+            name="password"
+            placeholder="passcode"
+          />
+          <input class="btn btn-dark" type="submit" title="rent" />
         </form>
       </div>
     </main>
