--- a/rent.html
+++ b/rent.html
@@ -41,8 +41,8 @@
             <option value="data-single">Single Room</option>
             <option value="data-two">Two Rooms</option>
             <option value="data-three">Three Rooms</option>
-            <option value="data-four">Four Room</option>
-            <option value="data-five">Fve Room</option>
+            <option value="data-four">Four Rooms</option>
+            <option value="data-five">Fve Rooms</option>
           </select>
           <select name="places covered" id="" style="">
             <option value="data-ad">Adenta</option>
