--- a/rent.html
+++ b/rent.html
@@ -26,7 +26,7 @@
           style="height: 200px; width: 200px"
         />
 
-        <h1>Ready to move!</h1>
+        <h1>Ready to Move!</h1>
         <p>Find a place to rent!</p>
 
         <div
@@ -42,7 +42,7 @@
             <option value="data-two">Two Rooms</option>
             <option value="data-three">Three Rooms</option>
             <option value="data-four">Four Rooms</option>
-            <option value="data-five">Fve Rooms</option>
+            <option value="data-five">Five Rooms</option>
           </select>
           <select name="places covered" id="" style="">
             <option value="data-ad">Adenta</option>
