--- a/rent.html
+++ b/rent.html
@@ -51,7 +51,12 @@
             <option value="data-ad">Kasoa</option>
           </select>
           <hr />
-          <button style="background-color: #fcd577">Continue</button>
+          <button
+            style="background-color: #fcd577"
+            onclick="window.location.href='search.html'"
+          >
+            Continue
+          </button>
         </div>
       </div>
     </main>
