--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <title>Blvck CEO</title>
   </head>
-  <body style="background-color: #000">
+  <body style="background-color: #000; font-family: 'Lato', sans-serif">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <button
@@ -33,7 +33,7 @@
           <a class="navbar-brand" href="#">BLVCKCEO</a>
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
+              <a class="nav-link active" aria-current="page" href="projects.html"
                 >Projects</a
               >
             </li>
@@ -45,38 +45,123 @@
               <a class="nav-link" href="#">About</a>
             </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="#">Achievements</a>
-            </li>
+            
           </ul>
         </div>
       </div>
     </nav>
 
-    <main
-      style="
-        margin: auto;
-        display: flex;
-        justify-self: center;
-        text-align: center;
-        flex-direction: column;
-        justify-content: center;
-        align-content: center;
-        min-height: 100vh;
-      "
+    <main>
+        <div
+    style="
+      margin: auto;
+      width: 80%;
+      border-radius: 10px;
+      padding: 20px;
+    "
+  >
+    <div
+      class="image_container"
+      style="margin: auto; width: fit-content; color: #fff"
     >
-      <h1 style="color: #fff">
-        <button
-          onclick="window.location.href='projects.html'"
-          style="
-            background-color: transparent;
-            color: white;
-            border: transparent;
-          "
+    <h1 style="color: #fff; font-family: 'Lato', sans-serif">
+        BLACKCEO
+    </h1>
+    </div>
+    <hr style="color: gray" />
+    <div style="text-align: center; margin-top: 8px">
+        <button> Hire Us</button>
+        
+    </div>
+  </div>
+      <!-- sections #1 -->
+      <div
+        style="
+          margin: auto;
+          width: 80%;
+          border-radius: 10px;
+          border-color: rgb(241, 241, 241);
+          background-color: rgb(27, 27, 27);
+          padding: 20px;
+        "
+      >
+        <div
+          class="image_container"
+          style="margin: auto; width: fit-content; color: #fff"
         >
-          Blackceo
-        </button>
-      </h1>
+          <img
+            src="/images/app.svg"
+            alt=" projects"
+            style="height: 80px; width: 80px"
+          />
+        </div>
+        <hr style="color: gray" />
+        <div style="text-align: center; margin-top: 8px">
+          <p style="color: #fff; font-family: 'Lato', sans-serif">
+            We Build Web Applications.
+          </p>
+        </div>
+      </div>
+      <!-- Section #2 -->
+      <hr />
+      <div
+        style="
+          margin: auto;
+          width: 80%;
+          border-radius: 10px;
+          border-color: rgb(241, 241, 241);
+          background-color: rgb(27, 27, 27);
+          padding: 20px;
+        "
+      >
+        <div
+          class="image_container"
+          style="margin: auto; width: fit-content; color: #fff"
+        >
+          <img
+            src="/images/projects.svg"
+            alt=" projects"
+            style="height: 80px; width: 80px"
+          />
+        </div>
+        <hr style="color: gray" />
+        <div style="text-align: center; margin-top: 8px">
+          <p style="color: #fff; font-family: 'Lato', sans-serif">
+            Check out our Projects.
+          </p>
+        </div>
+      </div>
+    </h1>
+    <!-- sections #3 -->
+    <hr>
+    <div
+    style="
+      margin: auto;
+      width: 80%;
+      border-radius: 10px;
+      border-color: rgb(241, 241, 241);
+      background-color: rgb(27, 27, 27);
+      padding: 20px;
+    "
+  >
+    <div
+      class="image_container"
+      style="margin: auto; width: fit-content; color: #fff"
+    >
+      <img
+        src="/images/team.svg"
+        alt=" projects"
+        style="height: 80px; width: 80px"
+      />
+    </div>
+    <hr style="color: gray" />
+    <div style="text-align: center; margin-top: 8px">
+      <p style="color: #fff; font-family: 'Lato', sans-serif">
+        Meet the Team.
+      </p>
+    </div>
+  </div>
+
     </main>
     <!-- Optional JavaScript; choose one of the two! -->
 
