--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
           <a class="navbar-brand" href="#">BLVCKCEO</a>
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="projects.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="projects.html"
                 >Projects</a
               >
             </li>
@@ -44,36 +47,24 @@
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
             </li>
-
-            
           </ul>
         </div>
       </div>
     </nav>
 
     <main>
+      <div style="margin: auto; width: 80%; border-radius: 10px; padding: 20px">
         <div
-    style="
-      margin: auto;
-      width: 80%;
-      border-radius: 10px;
-      padding: 20px;
-    "
-  >
-    <div
-      class="image_container"
-      style="margin: auto; width: fit-content; color: #fff"
-    >
-    <h1 style="color: #fff; font-family: 'Lato', sans-serif">
-        BLACKCEO
-    </h1>
-    </div>
-    <hr style="color: gray" />
-    <div style="text-align: center; margin-top: 8px">
-        <button> Hire Us</button>
-        
-    </div>
-  </div>
+          class="image_container"
+          style="margin: auto; width: fit-content; color: #fff"
+        >
+          <h1 style="color: #fff; font-family: 'Lato', sans-serif">BLACKCEO</h1>
+        </div>
+        <hr style="color: gray" />
+        <div style="text-align: center; margin-top: 8px">
+          <button>Hire Us</button>
+        </div>
+      </div>
       <!-- sections #1 -->
       <div
         style="
@@ -131,37 +122,35 @@
           </p>
         </div>
       </div>
-    </h1>
-    <!-- sections #3 -->
-    <hr>
-    <div
-    style="
-      margin: auto;
-      width: 80%;
-      border-radius: 10px;
-      border-color: rgb(241, 241, 241);
-      background-color: rgb(27, 27, 27);
-      padding: 20px;
-    "
-  >
-    <div
-      class="image_container"
-      style="margin: auto; width: fit-content; color: #fff"
-    >
-      <img
-        src="/images/team.svg"
-        alt=" projects"
-        style="height: 80px; width: 80px"
-      />
-    </div>
-    <hr style="color: gray" />
-    <div style="text-align: center; margin-top: 8px">
-      <p style="color: #fff; font-family: 'Lato', sans-serif">
-        Meet the Team.
-      </p>
-    </div>
-  </div>
-
+      <!-- sections #3 -->
+      <hr />
+      <div
+        style="
+          margin: auto;
+          width: 80%;
+          border-radius: 10px;
+          border-color: rgb(241, 241, 241);
+          background-color: rgb(27, 27, 27);
+          padding: 20px;
+        "
+      >
+        <div
+          class="image_container"
+          style="margin: auto; width: fit-content; color: #fff"
+        >
+          <img
+            src="/images/team.svg"
+            alt=" projects"
+            style="height: 80px; width: 80px"
+          />
+        </div>
+        <hr style="color: gray" />
+        <div style="text-align: center; margin-top: 8px">
+          <p style="color: #fff; font-family: 'Lato', sans-serif">
+            Meet the Team.
+          </p>
+        </div>
+      </div>
     </main>
     <!-- Optional JavaScript; choose one of the two! -->
 
