--- a/search.html
+++ b/search.html
@@ -54,7 +54,7 @@
            <p style="margin-bottom: 0px; text-align: left;"><strong>Adenta, Greater Accra, Ghana</strong> </p>
            <button
             style="background-color: #fcd577; width: 100%;"
-            onclick="window.location.href='search.html'"
+            onclick="window.location.href='room_details.com'"
           > View Room
         </button>
        </div>
@@ -68,7 +68,7 @@
            <p style="margin-bottom: 0px; text-align: left;"><strong>Adenta, Greater Accra, Ghana</strong> </p>
            <button
             style="background-color: #fcd577; width: 100%;"
-            onclick="window.location.href='search.html'"
+            onclick="window.location.href='room_details.com'"
           > View Room
         </button>
        </div>
@@ -83,7 +83,7 @@
            <p style="margin-bottom: 0px; text-align: left;"><strong>Adenta, Greater Accra, Ghana</strong> </p>
            <button
             style="background-color: #fcd577; width: 100%;"
-            onclick="window.location.href='search.html'"
+            onclick="window.location.href='room_details.com'"
           > View Room
         </button>
        </div>
@@ -98,7 +98,7 @@
            <p style="margin-bottom: 0px; text-align: left;"><strong>Adenta, Greater Accra, Ghana</strong> </p>
            <button
             style="background-color: #fcd577; width: 100%;"
-            onclick="window.location.href='search.html'"
+            onclick="window.location.href='room_details.com'"
           > View Room
         </button>
        </div>
@@ -112,7 +112,7 @@
            <p style="margin-bottom: 0px; text-align: left;"><strong>Osu, Greater Accra, Ghana</strong> </p>
            <button
             style="background-color: #fcd577; width: 100%;"
-            onclick="window.location.href='search.html'"
+            onclick="window.location.href='room_details.com'"
           > View Room
         </button>
        </div>
