--- a/room_details.html
+++ b/room_details.html
@@ -15,7 +15,7 @@
     <!-- my own css -->
     <link href="iindex.css" rel="stylesheet" />
 
-    <title>SEARCH</title>
+    <title>room</title>
   </head>
   <body>
     <div class="search">
@@ -25,7 +25,7 @@
         <div class="content_section">
             <table class="table">
         
-               SINGLE ROOMS
+               Single room at Adenta
               <tr>
                 <td>Bathroom</td>
                 <td><i>Private</i></td>
