--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
 
           <tr>
             <td colspan="1"><button
-                onclick="window.location.href='rent.html'"
+                onclick="window.location.href='rent_overview.html'"
                 style="
                   background-color: transparent;
                   color: white;
