--- a/rent_overview.html
+++ b/rent_overview.html
@@ -40,6 +40,7 @@
       <li><b>Daniel</b> – Back-End Developer</li>
       <li><b>Richard</b> - Front-End Developer</li>
       <li><b>Kwame</b> - Graphic Designer</li>
+       <li><b>Abiola</b> - Graphic Designer</li>
     </ol>
     <hr />
     <h2>Check-out our live prototype:</h2>
