--- a/rent_overview.html
+++ b/rent_overview.html
@@ -19,19 +19,13 @@
 
     <p>
       This app is to help people who normally struggle to find rooms to rent.
-      The people we are targeting are students and Job seekers.
-    </p>
-
-    <p>
-      Students especially those who have to move because their school is far
-      away. So then our app helps them to find rooms available closeby to the
-      school premises.
-    </p>
-
-    <p>
-      Job seekers who just moved to a new area because of their current Job or
-      looking for new jobs. We are also going to help them find rooms close to
-      their workplace.
+      The people we are targeting are students and job seekers.
+      <ol>
+        <li>Students who have to move because their school.</li>
+        <li>People who are moving because of their Job</li>
+      <ol>
+      the App helps them to find rooms close to
+      their workplace or school institutions.
     </p>
 
     <hr />
