--- a/rent_overview.html
+++ b/rent_overview.html
@@ -24,9 +24,11 @@
         <li>Students who have to move because their school.</li>
         <li>People who are moving because of their Job</li>
       <ol>
-      the App helps them to find rooms close to
-      their workplace or school institutions.
     </p>
+        
+        <p>the App helps them to find rooms close to
+      their workplace or school institutions.
+          </p
 
     <hr />
     <h2>Team Members currently on this project:</h2>
