--- a/projects.html
+++ b/projects.html
@@ -59,6 +59,11 @@
             <td><i>ongoing</i></td>
         </tr>
         </table>
+        
+        <div class = "project_overview">
+          <div class = "logo_for_app"></div>
+          <div class = "app_description"></div>
+        </div>
       </div>
     </main>
   </body>
