--- a/rent.html
+++ b/rent.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
+
+    <script type="module" src="tenantroom.js"></script>
+    <script type="module" src="script.js"></script>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,38 +30,26 @@
           style="height: 200px; width: 200px"
         />
 
-        <h1>Ready to Move!</h1>
-        <p>Find a place to rent!</p>
+        <h1>RENT A PLACE OF YOUR CHOICE</h1>
+        <p>
+          save money, and avoid the cost of searching a room to rent and find
+          the room from a landlord directly.
+        </p>
 
-        <div
-          style="
-            display: flex;
-            flex-direction: column;
-            width: 60%;
-            margin: auto;
-          "
-        >
-          <select name="type_of_room" id="">
+        <div class="choose">
+          <select name="type_of_room" class="select_place">
             <option value="data-single">Single Room</option>
             <option value="data-two">Two Rooms</option>
             <option value="data-three">Three Rooms</option>
             <option value="data-four">Four Rooms</option>
             <option value="data-five">Five Rooms</option>
           </select>
-          <select name="places covered" id="" style="">
-            <option value="data-ad">Adenta</option>
-            <option value="data-Os">Osu</option>
-            <option value="data-ad">Madina</option>
-            <option value="data-ad">Kasoa</option>
-          </select>
-          <hr />
-          <button
-            style="background-color: #fcd577"
-            onclick="window.location.href='search.html'"
-          >
-            Continue
-          </button>
         </div>
+
+        <br />
+        <button class="continue" onclick="window.location.href='search.html'">
+          Continue
+        </button>
       </div>
     </main>
 
