--- a/search.html
+++ b/search.html
@@ -17,6 +17,7 @@
 
     <title>SEARCH</title>
   </head>
+
   <body>
     <div class="search">
       <div>
@@ -44,7 +45,7 @@
             <div class="room_image">
               <img src="/images/sear.png" alt="" />
             </div>
-            <div class="room_desc">
+            <div class="room_desc" style="">
               <p style="margin: 0px"><b>Single Room</b></p>
               <p style="margin-top: -5px; padding: 0px; margin-bottom: -5px">
                 200 cedis
