--- a/rent.html
+++ b/rent.html
@@ -31,10 +31,7 @@
         />
 
         <h1>RENT A PLACE OF YOUR CHOICE</h1>
-        <p>
-          save money, and avoid the cost of searching a room to rent and find
-          the room from a landlord directly.
-        </p>
+        <p>save money, and avoid the cost of foot searching a room to rent.</p>
 
         <div class="choose">
           <select name="type_of_room" class="select_place">
