--- a/search.html
+++ b/search.html
@@ -41,11 +41,13 @@
         <div class="search_columns">
           <!-- grid box -->
           <!-- item one -->
-          <div class="item">
+          <div class="item" onclick="window.location.href='room_details.html'">
             <div class="room_image">
-              <img src="/images/sear.png" alt="" />
+              <a href="room_details.html">
+                <img src="/images/sear.png" alt=""
+              /></a>
             </div>
-            <div class="room_desc" style="">
+            <div class="room_desc">
               <p style="margin: 0px"><b>Single Room</b></p>
               <p style="margin-top: -5px; padding: 0px; margin-bottom: -5px">
                 200 cedis
@@ -57,7 +59,9 @@
           <!-- item two -->
           <div class="item">
             <div class="room_image">
-              <img src="/images/sear.png" alt="" />
+              <a href="room_details.html">
+                <img src="/images/sear.png" alt=""
+              /></a>
             </div>
             <div class="room_desc">
               <p style="margin: 0px"><b>Single Room</b></p>
@@ -71,7 +75,9 @@
           <!-- item three -->
           <div class="item">
             <div class="room_image">
-              <img src="/images/sear.png" alt="" />
+              <a href="room_details.html">
+                <img src="/images/sear.png" alt=""
+              /></a>
             </div>
             <div class="room_desc">
               <p style="margin: 0px"><b>Single Room</b></p>
@@ -85,7 +91,9 @@
           <!-- item four -->
           <div class="item">
             <div class="room_image">
-              <img src="/images/sear.png" alt="" />
+              <a href="room_details.html">
+                <img src="/images/sear.png" alt=""
+              /></a>
             </div>
             <div class="room_desc">
               <p style="margin: 0px"><b>Single Room</b></p>
@@ -95,10 +103,13 @@
               <p style="margin: 0px">Accra, Osu</p>
             </div>
           </div>
+
           <!-- item 5 -->
           <div class="item">
             <div class="room_image">
-              <img src="/images/sear.png" alt="" />
+              <a href="room_details.html">
+                <img src="/images/sear.png" alt=""
+              /></a>
             </div>
             <div class="room_desc">
               <p style="margin: 0px"><b>Single Room</b></p>
@@ -112,7 +123,9 @@
           <!-- item 6 -->
           <div class="item">
             <div class="room_image">
-              <img src="/images/sear.png" alt="" />
+              <a href="room_details.html">
+                <img src="/images/sear.png" alt=""
+              /></a>
             </div>
             <div class="room_desc">
               <p style="margin: 0px"><b>Single Room</b></p>
@@ -126,7 +139,9 @@
           <!-- item one -->
           <div class="item">
             <div class="room_image">
-              <img src="/images/sear.png" alt="" />
+              <a href="room_details.html">
+                <img src="/images/sear.png" alt=""
+              /></a>
             </div>
             <div class="room_desc">
               <p style="margin: 0px"><b>Single Room</b></p>
@@ -140,7 +155,9 @@
           <!-- item two -->
           <div class="item">
             <div class="room_image">
-              <img src="/images/sear.png" alt="" />
+              <a href="room_details.html">
+                <img src="/images/sear.png" alt=""
+              /></a>
             </div>
             <div class="room_desc">
               <p style="margin: 0px"><b>Single Room</b></p>
@@ -154,7 +171,9 @@
           <!-- item three -->
           <div class="item">
             <div class="room_image">
-              <img src="/images/sear.png" alt="" />
+              <a href="room_details.html">
+                <img src="/images/sear.png" alt=""
+              /></a>
             </div>
             <div class="room_desc">
               <p style="margin: 0px"><b>Single Room</b></p>
@@ -168,7 +187,9 @@
           <!-- item four -->
           <div class="item">
             <div class="room_image">
-              <img src="/images/sear.png" alt="" />
+              <a href="room_details.html">
+                <img src="/images/sear.png" alt=""
+              /></a>
             </div>
             <div class="room_desc">
               <p style="margin: 0px"><b>Single Room</b></p>
@@ -178,10 +199,13 @@
               <p style="margin: 0px">Accra, Osu</p>
             </div>
           </div>
+
           <!-- item 5 -->
           <div class="item">
             <div class="room_image">
-              <img src="/images/sear.png" alt="" />
+              <a href="room_details.html">
+                <img src="/images/sear.png" alt=""
+              /></a>
             </div>
             <div class="room_desc">
               <p style="margin: 0px"><b>Single Room</b></p>
@@ -195,7 +219,9 @@
           <!-- item 6 -->
           <div class="item">
             <div class="room_image">
-              <img src="/images/sear.png" alt="" />
+              <a href="room_details.html">
+                <img src="/images/sear.png" alt=""
+              /></a>
             </div>
             <div class="room_desc">
               <p style="margin: 0px"><b>Single Room</b></p>
@@ -210,7 +236,6 @@
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
-
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
