room page updated

--- a/room.html
+++ b/room.html
@@ -17,31 +17,32 @@
 
     </head>
     <body class="modal-body d-flex justify-content-center">
-        <div class="d-flex p-4 h-auto flex-column" style="width: 30%">
+        <div class="d-flex p-0 h-auto flex-column" style="width: 34%">
 
             <!-- room picture -->
-            <div class="d-flex justify-content-lg-center">
+            <div class="d-flex justify-content-center">
               <img
                 src="/images/room.png"
                 alt="room picture"
                 height="300px"
-                width="500px"
+                width="550px"
               />
         </div>
         <!-- end of room picture -->
         
         <!-- start of room facilities  card -->
-        <div class="card" style="width: 18rem; margin-top: 100px;">
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">
-                  <b>Kitchen</b><p style="color: red; text-align: end">Not Available</p></li>
-              <li class="list-group-item">
+        <div class="card d-flex" style="width: 28rem; margin-top: 100px;">
+            <ul class="list-group list-group-flush ">
+              <li class="list-group-item d-flex justify-content-around">
+                  <p><b>Kitchen</b></p>
+                  <p style="color: red;">Not Available</p></li>
+              <li class="list-group-item d-flex justify-content-around">
                   <b>Toilet</b><p style="color: red; text-align: end;">Not Available</p></li>
-              <li class="list-group-item">
+              <li class="list-group-item d-flex justify-content-around">
                   <b>Bathroom</b><p style="color: red; text-align: end;">Not Available</p></li>
-              <li class="list-group-item">
+              <li class="list-group-item d-flex justify-content-around">
                   <b>Electricity</b><p style="color: green; text-align: end;">Shared</p></li>
-              <li class="list-group-item">
+              <li class="list-group-item d-flex justify-content-around">
                   <b>Water</b><p style="color: green; text-align: end;">Private</p></li>
             </ul>
         </div>
